--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,14 +5,14 @@
 // Bootstrap
 //@import "~bootstrap/scss/bootstrap";
 $navbar-dropdown-background-color: black;
-$navbar-divider-background-color:black;
-$navbar-tab-active-border-bottom-color:orange;
+$navbar-divider-background-color: black;
+$navbar-tab-active-border-bottom-color: orange;
 $warning: #ffd419;
 $navbar-height: 5rem;
 $navbar-item-img-max-height: 4rem;
-$navbar-background-color:red;
-$navbar-item-color:green;
-$navbar-item-active-color:blue;
+$navbar-background-color: red;
+$navbar-item-color: green;
+$navbar-item-active-color: blue;
 $dropdown-content-background-color: $black;
 $dropdown-item-color: white;
 $navbar-dropdown-arrow: white;
@@ -31,8 +31,11 @@ $table-cell-padding: 0.85em;
 $link: white;
 $link-invert: #ffd419;
 $link-focus-border: #ffd419;
+$tabs-link-active-border-bottom-color: #ffd419;
+$tabs-link-hover-border-bottom-color: #ffd419;
 @import "~bulma/bulma.sass";
 @import "~bulma-tooltip";
 @import "~bulma-pageloader";
 @import "~bulma-pricingtable";
 @import "~bulma-switch";
+@import "~bulma-badge";
